# trackbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  trackbox.service
.github/workflows/: lint.yml
trackbox/: __main__.py  display.py  render.py  trackbox.py  widget.py
trackbox/widgets/: clock.py  condition.py  odds.py
