[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trackbox"
version = "0.1.0"
description = "Raspberry Pi GPIO switch reader for track conditions"
requires-python = ">=3.9"
dependencies = ["gpiozero", "luma.led_matrix"]

[project.scripts]
trackbox = "trackbox.trackbox:main"
