[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "trackbox"
dynamic = ["version"]
description = "Raspberry Pi GPIO switch reader for track conditions"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["gpiozero", "luma.led_matrix"]

[project.optional-dependencies]
dev = ["ruff", "bandit", "pre-commit", "setuptools-scm>=8"]

[project.scripts]
trackbox = "trackbox.trackbox:main"

[tool.setuptools_scm]
version_file = "trackbox/_version.py"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.bandit]
targets = ["trackbox"]
